--- a/bulletin/templates/bulletin/feed.html
+++ b/bulletin/templates/bulletin/feed.html
@@ -9,22 +9,34 @@
 <head>
     <meta charset="UTF-8">
     {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge"> {% endcomment %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    
+    <!--jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <!--axios -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     
-    <title>MyPetDiary</title>
+    <title>MyPetDiary-Feed</title>
 </head>
+
 <style>
     .main_body{
       display: flex;
+      flex-direction: column;
       background-color: whitesmoke; 
       margin-right: 20px; 
       margin-left: 20px; 
       margin-top: 10px; 
       margin-bottom: 10px;
       height: 500px; 
+    }
+    .content_box{
+        color : white;
+        height: 100px;
     }
     .contour{
         height: 2px; 
@@ -40,9 +52,10 @@
                 <button type="button" class="btn btn-default pull-right" onclick="location.href='../' ">
                     <b>📜목록</b>
                 </button>
-                <button type="button" class="btn btn-default pull-right" onclick="location.href='../upload/' ">
+                <button id="btn_write" type="button" class="btn btn-default pull-right" onclick="location.href='../upload/' ">
                     <b>✋글쓰기</b>
                 </button>
+                <a href="https://cloud.kt.com/" id = "t1">테스트</a>
             </div>
 
             <div>
@@ -53,10 +66,10 @@
                 <div></div>
                 <button type="button" aria-label="Left Align">
                     <b>작성자:  
-                        {% if not feed.user.name %}
-                            알 수 없음
+                        {% if feed.user.username %}
+                            {{feed.user.username}}
                         {% else %}
-                            {{feed.user.name}}
+                            알 수 없음
                         {% endif %}
                     </b>                
                 </button>
@@ -64,16 +77,68 @@
                 <p> time: {{feed.upload_time}}</p>
                 <div class="contour"></div>
                 <br><br>
-                <p>
-                    {% if not feed.content %}
-                        내용 없음
-                    {% else %}
-                        {{feed.content}}
-                    {% endif %}
-                </p>  
+                    <p>
+                        {% if not feed.content %}
+                            내용 없음
+                        {% else %}
+                            {{feed.content}}
+                        {% endif %}
+                    </p>
+                <br><br><br><br>
             </div>          
         </div>
+        <div class="container">
+            <input type="text" class="write_reply_input floating_input form-control" style="border: none;" id="floatingName" placeholder="댓글 달기...">
+            <span class="write_reply" feed_id="{{ feed.id }}" style="width: 200px; font-size: 16px; color: deepskyblue;font-weight: bold"> 게시 </span>
+        </div>
+        
+        <div class="feed_reply">
+            {% for reply in feed.reply_list %}
+                <span class="feed_txt"> <b> {{ reply.username }} </b> {{ reply.content }} </span>
+            {% endfor %}
+        </div>
+
     </div>
+
+  
+    <script>
+        $('.write_reply').click(function () {
+            console.log($(this).prev().val());
+            console.log($(this).attr('feed_id'));
+            let success = false;
+            let content = $(this).prev().val();
+            console.log(content);
+            let feed_id = Number($(this).attr('feed_id'));
+            console.log(feed_id)
+            console.log({{feed.user.id}})
+
+            $.ajax({
+                url: "/bulletin/add_reply",
+                data: {
+                    user_id: '{{ user.id }}',
+                    content: content,
+                    feed_id: feed_id
+                },
+                method: "POST",
+                dataType: "json",
+                async: false,
+                success: function (data){
+                    alert(data.message);
+                    success=true
+                },
+                error:function (request, status, error){
+                    let data = JSON.parse(request.responseText);
+                    console.log(data.message);
+                    alert(data.message);
+                }
+            });
+            console.log(success)
+            if(success == true){
+                $(this).parent().prev().append('<span class="feed_txt"><b> {{ user.username }}</b> '+ content +' </span>');
+                $('.write_reply_input').val('');
+            }
+        });
+      </script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </body>
