--- a/bulletin/templates/bulletin/upload.html
+++ b/bulletin/templates/bulletin/upload.html
@@ -10,11 +10,15 @@
     <meta charset="UTF-8">
     {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge"> {% endcomment %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    
-    <title>MyPetDiary</title>
+
+    <title>MyPetDiary-Upload</title>
 </head>
 <style>
     .main_body{
@@ -52,15 +56,16 @@
             <div class="contour"></div>
                 <form method="post" class="post-form my-3">
                     {% csrf_token %}
+                    
                     <div class="form-group">
-                    <label for="subject">제목</label>
-                    <input type="text" class="form-control" name="title"
-                    value="{{ form.title.value|default_if_none:'' }}">
+                        <label for="subject">제목</label>
+                        <input type="text" class="form-control" name="title"
+                        value="{{ form.title.value|default_if_none:'' }}">
                     </div>
                     <div class="form-group">
-                    <label for="content">내용</label>
-                    <textarea class="form-control" name="content" rows="10">
-                    {{ form.content.value|default_if_none:'' }}</textarea>
+                        <label for="content">내용</label>
+                        <textarea class="form-control" name="content" rows="10">
+                        {{ form.content.value|default_if_none:'' }}</textarea>
                     </div>
                     
                     <input type="submit" value="저장하기" style="font-weight:bold">
