--- a/bulletin/templates/bulletin/upload.html
+++ b/bulletin/templates/bulletin/upload.html
@@ -50,7 +50,7 @@
             </button>
             <br><br>
             <div class="contour"></div>
-                <form method="post" class="post-form my-3">
+                <form method="POST" class="post-form my-3">
                     {% csrf_token %}
                     <div class="form-group">
                     <label for="subject">제목</label>
@@ -59,8 +59,7 @@
                     </div>
                     <div class="form-group">
                     <label for="content">내용</label>
-                    <textarea class="form-control" name="content" rows="10">
-                    {{ form.content.value|default_if_none:'' }}</textarea>
+                    <textarea class="form-control" name="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
                     </div>
                     
                     <input type="submit" value="저장하기" style="font-weight:bold">
