--- a/bulletin/templates/bulletin/upload.html
+++ b/bulletin/templates/bulletin/upload.html
@@ -1,83 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-
-{%extends 'bulletin/tempExtendLayout.html'%}
+{%extends 'bulletin/base.html'%}
 {%block content%}
-
-<!--board html-->
-
-<head>
-    <meta charset="UTF-8">
-    {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge"> {% endcomment %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!--jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
-    <title>MyPetDiary-Upload</title>
-</head>
-<style>
-    .main_body{
-      display: flex;
-      background-color: whitesmoke; 
-      margin-right: 20px; 
-      margin-left: 20px; 
-      margin-top: 10px; 
-      margin-bottom: 10px;
-      height: 500px; 
-    }
-    .contour{
-        height: 2px; 
-        background-color: lightgrey;
-    }
-    .buffer{
-        height: 0px; 
-    }
-    textarea {
-        width: 100%;
-    }
-    input[type=submit] {
-        margin-top: 10px;
-    }
-  </style>
-
-<body>
-    <div class="main_body">
-        <div class="container">
-            <br>
-            <button type="button" class="btn btn-default pull-right" onclick="location.href='../' ">
-                <b>📜목록</b>
-            </button>
-            <br><br>
-            <div class="contour"></div>
-                <form method="POST" class="post-form my-3">
-                    {% csrf_token %}
-                    
-                    <div class="form-group">
-                        <label for="subject">제목</label>
-                        <input type="text" class="form-control" name="title"
-                        value="{{ form.title.value|default_if_none:'' }}">
-                    </div>
-                    <div class="form-group">
-                    <label for="content">내용</label>
-                    <textarea class="form-control" name="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
-                    </div>
-                    
-                    <input type="submit" value="저장하기" style="font-weight:bold">
-                    <div><br></div>
-                </form>
+<div class="main_body">
+    <div class="container">
+        <br>
+        <button type="button" class="btn btn-default pull-right" onclick="location.href='../' ">
+            <b>📜목록</b>
+        </button>
+        <br><br>
+        <div class="contour"></div>
+            <form method="POST" class="post-form my-3">
+                {% csrf_token %}
                 
-            <div class="contour"></div>
-                   
-        </div>
+                <div class="form-group">
+                    <label for="subject">제목</label>
+                    <input type="text" class="form-control" name="title"
+                    value="{{ form.title.value|default_if_none:'' }}">
+                </div>
+                <div class="form-group">
+                <label for="content">내용</label>
+                <textarea class="form-control" name="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
+                </div>
+                
+                <input type="submit" value="저장하기" style="font-weight:bold">
+                <div><br></div>
+            </form>
+            
+        <div class="contour"></div>
+                
     </div>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</body>
-
+</div>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 {%endblock%}
-</html>
