--- a/log_sign/templates/log_sign/signup_error_id_email.html
+++ b/log_sign/templates/log_sign/signup_error_id_email.html
@@ -24,8 +24,8 @@
         <div class="col-12">
             <h4>Come to Join Us!</h4>
         </div>
-        <div class="col-8">
-            <span>이미 회원가입을 했다면 <a href="{% url 'log_sign:login' %}">로그인 하세요 :)</a></span>
+        <div class="col-12">
+            <span style="font-size:15px; color: #dc3545;">이미 사용중인 ID/Email입니다.</span>
         </div>
     </div>
     <form method="post" class="post-form" action="{% url 'log_sign:signup' %}">
