--- a/log_sign/templates/log_sign/signup_error_pw.html
+++ b/log_sign/templates/log_sign/signup_error_pw.html
@@ -25,7 +25,7 @@
             <h4>Come to Join Us!</h4>
         </div>
         <div class="col-8">
-            <span>이미 회원가입을 했다면 <a href="{% url 'log_sign:login' %}">로그인 하세요 :)</a></span>
+            <span style="font-size:15px; color: #dc3545;">서로 다른 비밀번호를 입력했습니다!</span>
         </div>
     </div>
     <form method="post" class="post-form" action="{% url 'log_sign:signup' %}">
