--- a/photo_zone/templates/photo_zone/main.html
+++ b/photo_zone/templates/photo_zone/main.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <link rel="stylesheet" type="text/css" href="{% static 'photo.css' %}?after" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,7 +29,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 
-    <title>여기에 만들꺼임</title>
+    <title>반려동물 자랑</title>
   
   </head>
   <script>
@@ -37,236 +37,27 @@
       headers: { "X-CSRFToken": '{{csrf_token}}' }
     });
   </script>
-  <style>
-    .main_body {
-        display: flex;
-        justify-content: center;
-        padding-top: 50px;
-        background-color: #fafafa;
-        z-index: 1;
-      }
-      
-      .feed_box {
-        background-color: white;
-        width: 600px;
-        margin: 20px;
-        min-height: auto;
-        padding-bottom: 10px;
-      }
-      
-      .feed_img {
-        width: 100%;
-        object-fit: contain;
-      }
-      
-      .feed_content {
-        padding: 0px 10px;
-      }
-      
-      .feed_like {
-        padding: 0px 10px;
-      }
-      
-      .feed_reply {
-        padding: 0px 10px;
-        display: flex;
-        flex-direction: column;
-      }
-      
-      .feed_txt {
-        font-size: 14px;
-      }
-      
-      .feed_icon {
-        padding: 5px 5px 0px 5px;
-        display: flex;
-        justify-content: space-between;
-      }
-      span {
-        padding-right: 5px;
-      }
-      
-      .feed_name {
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-      }
-      
-      .feed_name_txt {
-        font-size: 14px;
-        padding: 0px 10px;
-        font-weight: bold;
-      }
-      
-      .profile_box {
-        width: 40px;
-        height: 40px;
-        border-radius: 70%;
-        overflow: hidden;
-      }
-      
-      .profile_img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      
-      .name_content {
-        display: flex;
-        flex-direction: column;
-      }
-      
-      .name_content_txt {
-        font-size: 12px;
-        padding: 0px 10px;
-        font-weight: bold;
-        color: lightgray;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 190px;
-      }
-      
-      .big_profile_box {
-        width: 60px;
-        height: 60px;
-        border-radius: 70%;
-        overflow: hidden;
-      }
-      
-      .link_txt {
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        text-decoration: none;
-      }
-      
-      .recommend_box {
-        display: flex;
-        justify-content: space-between;
-        padding: 5px;
-        font-size: 14px;
-        font-weight: bold;
-        align-items: center;
-      }
-      
-      .comment_box {
-        margin: 40px 0 0 5px;
-        font-size: 12px;
-        font-weight: bold;
-        color: lightgray;
-        display: flex;
-        flex-direction: column;
-      }
-      @media screen and (max-width: 1280px) {
-        .right_body {
-          display: none;
-        }
-      }
-      .modal {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background: rgba(0, 0, 0, 0.8);
-        backdrop-filter: blur(1.5px);
-        -webkit-backdrop-filter: blur(1.5px);
-      }
-      
-      .modal_window {
-        background: white;
-        backdrop-filter: blur(13.5px);
-        -webkit-backdrop-filter: blur(13.5px);
-        border-radius: 10px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        width: 800px;
-        height: 600px;
-        position: relative;
-      }
-      
-      .modal_title {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        font-weight: bold;
-        font-size: 20px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.18);
-      }
-      
-      .modal_title_side {
-        margin: 5px;
-        flex: 0 0 40px;
-        text-align: center;
-      }
-      
-      .modal_image_upload {
-        outline: 2px dashed black;
-        outline-offset: -10px;
-        transition: all 0.15s ease-in-out;
-        width: 798px;
-        height: 548px;
-        text-align: center;
-        line-height: 548px;
-      }
-      
-      .modal_image_upload_content {
-        outline: 2px dashed black;
-        outline-offset: -10px;
-        text-align: center;
-        transition: all 0.15s ease-in-out;
-        width: 500px;
-        height: 548px;
-      }
-      
-      .modal_image_content {
-        display: flex;
-        flex-direction: row;
-      }
-      
-      .modal_content_write {
-        display: flex;
-        flex-direction: column;
-        border-left: 1px solid rgba(0, 0, 0, 0.18);
-      }
-      
-      .feed_content_textarea {
-        resize: none;
-        width: 294px;
-        border: none;
-      }
-      
-      @media screen and (max-width: 1280px) {
-        .right_body {
-          display: none;
-        }
-      }
-      
-  </style>
 
 <!--모달 2개를 띄워서 첫 번째는 이미지를 드래그해서 업로드 두 번째는
     업로드 된 이미지를 보이고 글을 쓰는 창 추가-->
-    <body>
-      <div id="modal_add_feed" class="modal modal_overlay">
-        <div class="modal_window">
-            <div class="modal_title">
-                <div class="modal_title_side"></div>
-                <div> 새 게시물 </div>
-                <div class="modal_title_side">
-                    <span id="close_modal" class="close_modal material-icons-outlined" style="font-size: 30px">
-                        close
-                    </span>
-                </div>
-            </div>
-            <div class="modal_image_upload">
-                <span style="text-align: center"> 사진을 여기에 끌어다 놓으세요. </span>
-    
-            </div>
-        </div>
+  <body>
+    <div id="modal_add_feed" class="modal modal_overlay">
+      <div class="modal_window">
+          <div class="modal_title">
+              <div class="modal_title_side"></div>
+              <div> 새 게시물 </div>
+              <div class="modal_title_side">
+                  <span id="close_modal" class="close_modal material-icons-outlined" style="font-size: 30px">
+                      close
+                  </span>
+              </div>
+          </div>
+          
+          <div class="modal_image_upload">
+              <span style="text-align: center"> 사진을 여기에 끌어다 놓으세요. </span>
+  
+          </div>
+      </div>
     </div>
     
     <div id="modal_add_feed_content" class="modal modal_overlay_content">
@@ -325,22 +116,28 @@
         <div class="border feed_box">
           <div class="feed_name" >
             작성자 : {{feed.username}}
-            <button class="btn btn-danger rounded-pill" onclick="location.href='/delete/{{feed.id}}'">삭제</button>
+            <a class="btn btn-danger rounded-pill" href="{% url 'photo_zone:deleteFeed' feed.id %}">삭제</a>
           </div>
           <!--get_media_prefix : settings.py에서 정의한 media_url을 출력, ~/media/{파일이름}-->
           <img class="feed_img" src="{% get_media_prefix %}{{ feed.image}}" />  
   
           <div class="feed_icon">
             <div>
-              <span class="material-icons-outlined"> thumb_up_alt </span>
+              
+              {% comment %} <span class="material-icons-outlined">  {% endcomment %}
+              <span feed_id="{{ feed.id }}"  class="material-icons-outlined"> 
+                {% if feed.is_like %}favorite{% else %}favorite_border{% endif %}
+              </span>
               <span class="material-icons-outlined"> comment </span>
             </div>
           </div>
+
           <div class="feed_like">
             <p class="feed_txt">
               <b>좋아요 {{ feed.like_count }}개 를 받았습니다</b>
             </p>
           </div>
+
           <div class="feed_content">
             <p class="feed_txt">
               <p class="feed_txt"> <b> {{ feed.username }}  :  </b> {{ feed.content }}</p>
@@ -352,12 +149,14 @@
             {% for reply in feed.reply_list %}
                 <span class="feed_txt"> <b> {{ reply.username }} </b> {{ reply.content }} </span>
             {% endfor %}
-        </div>
+          </div>
+
 
         <div class="feed_reply_write">
           <input type="text" class="write_reply_input floating_input form-control" style="border: none;" id="floatingName" placeholder="댓글 달기...">
-          <span class="write_reply" feed_id="{{ feed.id }}" style="width: 200px; font-size: 16px; color: deepskyblue;font-weight: bold"> 게시 </span>
+          <span class="write_reply" feed_id="{{ feed.id }}" style="width: 100px; font-size: 16px; color: deepskyblue;font-weight: bold"> 게시 </span>
       </div>
+
         </div>
       </div>
       {% endfor %}
@@ -513,11 +312,13 @@
             }
         })
     };
+
+    
   
       //댓글 달기
       $('.write_reply').click(function () {
           console.log($(this).prev().val());
-          console.log($(this).attr('feed_id'));
+          console.log($(this).attr('feed_id'));  // feed_id 가져오기
           let success = false;
           let content = $(this).prev().val();
           let feed_id = Number($(this).attr('feed_id'));
