--- a/bulletin/templates/bulletin/board.html
+++ b/bulletin/templates/bulletin/board.html
@@ -38,16 +38,16 @@
 
             <hr>
             <div class="pagination">
-                {% if board.has_previous %}
+                {% if post_list.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ board.previous_page_number}}">◁</a>
+                    <a class="page-link" href="?page={{ post_list.previous_page_number}}">◁</a>
                 </li>
                 {% endif %}
 
                 {% for page_num in page_range %}
                 <li class="page-item">
                     <a class="page-link" href="?page={{page_num}}">
-                        {% if board_number == page_num%}
+                        {% if current_page == page_num%}
                             <b><u>{{page_num}}</u></b>
                         {% else %}
                             {{page_num}}
@@ -57,9 +57,9 @@
                 </li>
                 {% endfor %}
 
-                {% if board.has_next%}
+                {% if post_list.has_next%}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ board.next_page_number}}">▷</a>
+                    <a class="page-link" href="?page={{ post_list.next_page_number}}">▷</a>
                 </li>
                 {% endif %}
 
