--- a/bulletin/templates/bulletin/board.html
+++ b/bulletin/templates/bulletin/board.html
@@ -28,7 +28,7 @@
                     <tr>
                         <td width="50px">{{post.id}}</td>
                         <td width="200px"><a href="./{{post.id}}"><b>{{post.title}}</b></a></td>
-                        <td width="100px">{{post.user.name}}</td>
+                        <td width="100px">{{post.user.username}}</td>
                         <td width="150px">{{post.write_date}}</td>
                         <td width="50px">{{post.view_count}}</td>
                     </tr>
